--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,19 @@
 <body>
 
 	<div id="container">
-		<div id="list"></div>
+		<div id="name">Manel locations</div>
+		<div id="bar">This is the bar</div>
+		<div id="list">
+			<ul data-bind="foreach: allMarkers">
+				<li data-bind="text: name, click: $parent.openInfoWindow"></li>
+			</ul>
+		</div>
 		<div id="map"></div>
 	</div>
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE"></script>
 	<script src="js/lib/knockout-3.4.0.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/markers.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
