--- a/app/index.html
+++ b/app/index.html
@@ -11,22 +11,22 @@
 
 	<div id="container">
 		<div id="name">Manel locations</div>
-		<div id="bar">This is the bar</div>
+		<div id="bar"></div>
 		<div id="list">
 			<div id="filter">
-				<input id="filter-text" type="text">
+				<input id="filter-field" type="text" data-bind="textInput: filterText">
 				<img id="filter-button" src="img/filter.png" alt="filter">
 			</div>
-			<ul data-bind="foreach: allMarkers">
-				<li data-bind="text: name, event: {click: $parent.toggleInfo, mouseover: $parent.toggleBounce, mouseout: $parent.toggleBounce}"></li>
+			<ul data-bind="foreach: allLocations">
+				<li data-bind="visible: show, text: name, event: {click: $parent.toggleInfo, mouseover: $parent.toggleBounce, mouseout: $parent.toggleBounce}"></li>
 			</ul>
 		</div>
-		<div id="map"></div>
+		<div id="map" data-bind="text: map"></div>
 	</div>
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE"></script>
 	<script src="js/lib/knockout-3.4.0.js"></script>
-	<script src="js/markers.js"></script>
+	<script src="js/locations.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
