--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,25 @@
 
 </head>
 <body>
+	<!-- The Modal -->
+	<div id="modal">
+		<div id="modal-window">
+			<span id="close">x</span>
+			<h2>Flickr pictures</h2>
+			<div id="flickr-images">
+			</div>
+			<h2>Wikipedia links</h2>
+			<ul id="wiki-content"></ul>
+		</div>
+	</div>
 
 	<div id="container">
-		<div id="name">Manel locations</div>
+		<div id="name">Barcelona locations</div>
 		<div id="bar"></div>
 		<div id="list">
 			<div id="filter">
+				<span>Filter</span>
 				<input id="filter-field" type="text" data-bind="textInput: filterText">
-				<img id="filter-button" src="img/filter.png" alt="filter">
 			</div>
 			<ul data-bind="foreach: allLocations">
 				<li data-bind="visible: show, text: name, event: {click: $parent.toggleInfo, mouseover: $parent.toggleBounce, mouseout: $parent.toggleBounce}"></li>
@@ -26,7 +37,9 @@
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE"></script>
 	<script src="js/lib/knockout-3.4.0.js"></script>
+	<script src="js/lib/jquery.js"></script>
 	<script src="js/locations.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/extrainfo.js"></script>
 </body>
 </html>
