--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 			<ul id="wiki-content"></ul>
 		</div>
 	</div>
-
+	<!-- Content -->
 	<div id="container">
 		<div id="name"><h3>Barcelona locations</h3></div>
 		<div id="bar">
@@ -34,7 +34,7 @@
 		</div>
 		<div id="map" data-bind="text: map"></div>
 	</div>
-
+	<!-- Scripts -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE"></script>
 	<script src="js/lib/knockout-3.4.0.js"></script>
 	<script src="js/lib/jquery.js"></script>
