--- a/app/index.html
+++ b/app/index.html
@@ -8,31 +8,36 @@
 </head>
 <body>
 	<!-- Modal window -->
-	<div id="modal">
-		<div id="modal-window">
-			<span id="close">x</span>
+	<div id="modal" class="modal">
+		<div class="modal-window">
+			<span class="close">x</span>
 			<h2>Flickr pictures</h2>
-			<div id="flickr-images">
+			<div class="flickr-pictures" data-bind="foreach: flickrPictures">
+				<img class="flickr-images" data-bind="attr: {src: pictureUrl}" />
 			</div>
 			<h2>Wikipedia links</h2>
-			<ul id="wiki-content"></ul>
+			<ul class="wiki-content" data-bind="foreach: wikiLinks">
+				<li class='wiki-link'>
+					<a data-bind="text: linkName, attr: {href: wikiLink}" target="_blank"></a>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<!-- Content -->
-	<div id="container">
-		<div id="name"><h3>Barcelona locations</h3></div>
-		<div id="bar">
-			<div id="filter">
+	<div class="container">
+		<div class="name"><h3>Barcelona locations</h3></div>
+		<div class="bar">
+			<div class="filter">
 				<span>Filter</span>
-				<input id="filter-field" type="text" data-bind="textInput: filterText">
+				<input class="filter-field" type="text" data-bind="textInput: filterText">
 			</div>
 		</div>
-		<div id="list">
+		<div class="list">
 			<ul data-bind="foreach: allLocations">
 				<li data-bind="visible: show, text: name, event: {click: $parent.toggleInfo, mouseover: $parent.bounce}"></li>
 			</ul>
 		</div>
-		<div id="map" data-bind="text: map"></div>
+		<div class="map" data-bind="text: map"></div>
 	</div>
 	<!-- Scripts -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE"></script>
@@ -40,6 +45,6 @@
 	<script src="js/lib/jquery.js"></script>
 	<script src="js/locations.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/extrainfo.js"></script>
+	<!-- <script src="js/extrainfo.js"></script> -->
 </body>
 </html>
