Create Location methods

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 		<div class="map" data-bind="text: map"></div>
 	</div>
 	<!-- Scripts -->
-	<script async src="https://maps.googleapis.com/maps/api/js?callback=startModel&key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE"></script>
+	<script async src="https://maps.googleapis.com/maps/api/js?callback=startModel&key=AIzaSyDdTNrsUmxUIcYUxbfzsLDAtVuk_oUrOaE" onerror="googleMapsError()"></script>
 	<script src="js/lib/knockout-3.4.0.js"></script>
 	<script src="js/lib/jquery.js"></script>
 	<script src="js/locations.js"></script>
